--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,17 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <!-- Favicon básico -->
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="shortcut icon" href="img/icons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
+    <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
 
     <!-- Apple y Android -->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="img/icons/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/images/icons/android-chrome-512x512.png">
 
     <!-- Web App Manifest -->
-    <link rel="manifest" href="img/icons/site.webmanifest">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="manifest" href="assets/images/icons/site.webmanifest">
+    <link rel="stylesheet" href="assets/style/style.css">
 </head>
 
 <body>
