--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ s<!DOCTYPE html>
     <nav class="navbar navbar-expand-lg ">
         <div class="container">
           <a class="navbar-brand fw-bold" href="#inicio">
-            <img src="img/logo.svg" alt="UniStress Logo">
+            <img src="assets/images/logo.svg" alt="UniStress Logo">
             UniStress</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,21 +79,21 @@ s<!DOCTYPE html>
         <div class="row g-4">
           <div class="col-md-4">
             <div class="card border-0 shadow-sm h-100 p-4">
-              <img src="img/mision.png" class="mx-auto mb-3" style="height: 80px;">
+              <img src="assets/images/mision.png" class="mx-auto mb-3" style="height: 80px;">
               <h5 class="fw-bold">Nuestra Misión</h5>
               <p class="text-muted">Brindamos herramientas y apoyo emocional para afrontar el estrés académico con confianza.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card border-0 shadow-sm h-100 p-4">
-              <img src="img/caracteristicas.png" class="mx-auto mb-3" style="height: 80px;">
+              <img src="assets/images/caracteristicas.png" class="mx-auto mb-3" style="height: 80px;">
               <h5 class="fw-bold">Características Principales</h5>
               <p class="text-muted">Planes personalizados, asesoramiento profesional y comunidad colaborativa.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card border-0 shadow-sm h-100 p-4">
-              <img src="img/comunidad.png" class="mx-auto mb-3" style="height: 80px;">
+              <img src="assets/images/comunidad.png" class="mx-auto mb-3" style="height: 80px;">
               <h5 class="fw-bold">Únete a nuestra comunidad</h5>
               <p class="text-muted">Conectate con personas afines y compartí tu experiencia en un espacio seguro.</p>
             </div>
