--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ s<!DOCTYPE html>
           <div class="col-md-4 mb-4">
             <h5 class="fw-bold">Síguenos</h5>
             <div class="d-flex justify-content-center justify-content-md-start gap-3">
-              <a href="javascript:void(0);" class="text-white"><img src="assets/images//facebook.png" alt="Facebook" class="social-icon"></a>
-              <a href="javascript:void(0);" class="text-white"><img src="assets/images//x.png" alt="X/Twitter" class="social-icon"></a>
-              <a href="javascript:void(0);" class="text-white"><img src="assets/images//instagram.png" alt="Instagram" class="social-icon"></a>
+              <a href="javascript:void(0);" class="text-white"><img src="assets/images/facebook.png" alt="Facebook" class="social-icon"></a>
+              <a href="javascript:void(0);" class="text-white"><img src="assets/images/x.png" alt="X/Twitter" class="social-icon"></a>
+              <a href="javascript:void(0);" class="text-white"><img src="assets/images/instagram.png" alt="Instagram" class="social-icon"></a>
             </div>
           </div>
 
