--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ s<!DOCTYPE html>
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="assets/images/icons/site.webmanifest">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 
 <body>
