--- a/login.html
+++ b/login.html
@@ -6,19 +6,20 @@
   <title>UniStress - Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+
   <!-- Favicon básico -->
-  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-  <link rel="shortcut icon" href="img/icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
+  <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
 
   <!-- Apple y Android -->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="img/icons/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/images/icons/android-chrome-512x512.png">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="img/icons/site.webmanifest">
+  <link rel="manifest" href="assets/images/icons/site.webmanifest">
   <meta name="theme-color" content="#0d6efd">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/styles/styles.css" />
 </head>
 <body class="login-body">
   <div class="login-container">
@@ -36,32 +37,33 @@
       <button type="submit" class="btn btn-login w-100">Ingresar</button>
     </form>
     <div class="social-login mt-4">
-    <p class="text-center mb-3">O inicia sesión con</p>
-    <div class="d-flex justify-content-center gap-3">
+      <p class="text-center mb-3">O inicia sesión con</p>
+      <div class="d-flex justify-content-center gap-3">
         <a href="#" class="btn-social google">
-        <img src="img/google.png" alt="Google" />
+          <img src="assets/images/google.png" alt="Google" />
         </a>
         <a href="#" class="btn-social facebook">
-        <img src="img/facebook.png" alt="Facebook" />
+          <img src="assets/images/facebook.png" alt="Facebook" />
         </a>
         <a href="#" class="btn-social twitter">
-        <img src="img/x.png" alt="X (Twitter)" />
+          <img src="assets/images/x.png" alt="X (Twitter)" />
         </a>
-    </div>
+      </div>
     </div>    
     <p class="mt-3 text-center">¿No tienes una cuenta? <a href="registro.html" class="link">Regístrate aquí</a></p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script type="module" src="script/login.js"></script>
+  <script type="module" src="assets/scripts/login.js"></script>
   <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(() => console.log('✅ Service Worker registrado'))
-      .catch(error => console.error('❌ Error al registrar Service Worker:', error));
-  }
-</script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js') // sin slash
+        .then(() => console.log('✅ Service Worker registrado'))
+        .catch(error => console.error('❌ Error al registrar Service Worker:', error));
+    }
+  </script>
 </body>
 </html>
+
 
