--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
   <script type="module" src="assets/scripts/login.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js') // sin slash
+      navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('✅ Service Worker registrado'))
         .catch(error => console.error('❌ Error al registrar Service Worker:', error));
     }
