--- a/registro.html
+++ b/registro.html
@@ -7,18 +7,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+
   <!-- Favicon básico -->
-  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-  <link rel="shortcut icon" href="img/icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
+  <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
 
   <!-- Apple y Android -->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="img/icons/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/images/icons/android-chrome-512x512.png">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="img/icons/site.webmanifest">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="manifest" href="assets/images/icons/site.webmanifest">
+  <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
   <div class="container d-flex justify-content-center align-items-center min-vh-100">
@@ -26,6 +27,7 @@
       <h2 class="text-center mb-4">Crea tu cuenta en UniStress</h2>
       <form id="formRegistro">
         <div class="row g-3">
+          <!-- Campos del formulario -->
           <div class="col-md-6">
             <label for="nombre" class="form-label">Nombre</label>
             <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
@@ -34,12 +36,10 @@
             <label for="apellido" class="form-label">Apellido</label>
             <input type="text" class="form-control" id="apellido" placeholder="Tu apellido" required>
           </div>
-
           <div class="col-md-6">
             <label for="fecha" class="form-label">Fecha de nacimiento</label>
             <input type="date" class="form-control" id="fecha" required>
           </div>
-
           <div class="col-md-6">
             <label for="genero" class="form-label">Género</label>
             <select id="genero" class="form-select" required>
@@ -48,33 +48,27 @@
               <option>Masculino</option>
             </select>
           </div>
-
           <div class="col-md-6">
             <label for="carrera" class="form-label">Carrera</label>
             <input type="text" class="form-control" id="carrera" placeholder="Tu carrera" required>
           </div>
-
           <div class="col-md-6">
             <label for="universidad" class="form-label">Universidad</label>
             <input type="text" class="form-control" id="universidad" placeholder="Tu universidad" required>
           </div>
-
           <div class="col-12">
             <label for="email" class="form-label">Correo electrónico</label>
             <input type="email" class="form-control" id="email" placeholder="correo@ejemplo.com" required>
           </div>
-
           <div class="col-md-6">
             <label for="password" class="form-label">Contraseña</label>
             <input type="password" class="form-control" id="password" placeholder="********" required>
           </div>
-
           <div class="col-md-6">
             <label for="confirmar" class="form-label">Confirmar contraseña</label>
             <input type="password" class="form-control" id="confirmar" placeholder="********" required>
           </div>
         </div>
-
         <div class="d-grid gap-3 mt-4">
           <button type="submit" class="btn btn-register">Registrarse</button>
           <a href="login.html" class="link text-center">¿Ya tienes una cuenta? Inicia sesión</a>
@@ -86,6 +80,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script type="module" src="script/registro.js"></script>
+  <script type="module" src="assets/scripts/registro.js"></script>
 </body>
 </html>
+
