--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   <title>UniStress</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/styles/style.css">
+  <link rel="stylesheet" href="assets/styles/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <!-- Favicon básico -->
