--- a/dashboard.html
+++ b/dashboard.html
@@ -65,17 +65,17 @@
       <section id="perfil" class="container py-4 seccionDashboard">
         <div class="row align-items-center mb-4">
           <div class="col-md-3 d-flex flex-column align-items-center">
-            <img id="foto-perfil" src="img/perfil.png" class="rounded-circle" width="100" height="100" alt="Foto de perfil">
+            <img id="foto-perfil" src="assets/images/perfil.png" class="rounded-circle" width="100" height="100" alt="Foto de perfil">
             <button class="btn btn-personalizado btn-sm mt-2" data-bs-toggle="modal" data-bs-target="#modalFotoPerfil">Cambiar Foto</button>
           </div>
           <div class="col-md-6">
-            <h3 id="nombreUsuarioTexto">Juan Pérez</h3>
-            <p>Cuenta: <span id="tipoCuenta" class="badge-mint">Premium</span></p>
-            <p>Correo: <span id="correoUsuario">juan.perez@email.com</span></p>
-            <p>Fecha de nacimiento: <span id="fechaNacimientoUsuario">12/07/2000</span></p>
-            <p>Género: <span id="generoUsuario">Masculino</span></p>
-            <p>Carrera: <span id="carreraUsuarioTexto">No especificada</span></p>
-            <p>Universidad: <span id="universidadUsuarioTexto">No especificada</span></p>
+            <h3 id="nombreUsuarioTexto"></h3>
+            <p>Cuenta: <span id="tipoCuenta" class="badge-mint"></span></p>
+            <p>Correo: <span id="correoUsuario"></span></p>
+            <p>Fecha de nacimiento: <span id="fechaNacimientoUsuario"></span></p>
+            <p>Género: <span id="generoUsuario"></span></p>
+            <p>Carrera: <span id="carreraUsuarioTexto"></span></p>
+            <p>Universidad: <span id="universidadUsuarioTexto"></span></p>
             <button class="btn btn-personalizado" data-bs-toggle="modal" data-bs-target="#modalEditarPerfil">Editar Perfil</button>
           </div>
           <!-- Termómetro emocional -->
