--- a/dashboard.html
+++ b/dashboard.html
@@ -409,7 +409,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body text-center">
-          <img id="previewFotoPerfil" src="img/perfil.png" class="rounded-circle mb-3" width="120" height="120" alt="Preview Foto">
+          <img id="previewFotoPerfil" src="assets/images/perfil.png" class="rounded-circle mb-3" width="120" height="120" alt="Preview Foto">
           <input type="file" class="form-control" id="inputFotoPerfil" accept="image/*">
           <p class="texto-secundario mt-2">Elige una imagen PNG o JPG (máx. 2MB).</p>
         </div>
