--- a/dashboard.html
+++ b/dashboard.html
@@ -6,21 +6,21 @@
   <title>UniStress</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="assets/styles/styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet">
   <!-- Favicon básico -->
-  <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-  <link rel="shortcut icon" href="img/icons/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icons/favicon-32x32.png">
+  <link rel="shortcut icon" href="assets/images/icons/favicon.ico">
 
   <!-- Apple y Android -->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/icons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="img/icons/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/images/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/images/icons/android-chrome-512x512.png">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="img/icons/site.webmanifest">
+  <link rel="manifest" href="assets/images/icons/site.webmanifest">
 </head>
 <body>
   <!-- =================== Contenedor Principal =================== -->
@@ -524,7 +524,7 @@
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-  <script type="module" src="script/main.js"></script>
+  <script type="module" src="assets/scripts/main.js"></script>
 </body>
 </html>
 
