--- a/dashboard.html
+++ b/dashboard.html
@@ -176,7 +176,9 @@
             <strong data-i18n="estadoEmocional.historialTitulo">Historial de Emociones</strong>
           </div>
           <div class="card-body">
-            <canvas id="graficoEmociones" height="150"></canvas>
+            <div class="grafico-emociones-container">
+              <canvas id="graficoEmociones"></canvas>
+            </div>
             <div class="text-end mt-3">
               <button id="btnDescargarHistorial" class="btn btn-personalizado btn-sm" data-i18n="estadoEmocional.btnDescargar">
                 📥 Descargar Historial
