Nuevos Cambios Landing

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <!-- Texto principal -->
           <div class="col-md-6 text-center text-md-start">
             <h1 class="display-4 fw-bold mb-3">Cuidamos tu bienestar emocional</h1>
-            <p class="lead text-muted mb-4">UniStress detecta señales de ansiedad y estrés académico en estudiantes universitarios, brindando acompañamiento personalizado.</p>
+            <p>UniStress detecta señales de ansiedad y estrés académico en estudiantes universitarios, brindando acompañamiento personalizado.</p>
             <a href="login.html" class="btn btn-primary btn-lg rounded-pill px-4 shadow-sm">Empieza ahora</a>
           </div>
 
@@ -73,7 +73,7 @@
 
     
     <!-- Funcionalidades -->
-    <section id="funcionalidades" class="section-full bg-light">
+    <section id="funcionalidades" class="section-full">
       <div class="container text-center">
         <h2 class="display-5 fw-bold mb-5">¿Qué ofrece UniStress?</h2>
         <div class="row g-4">
@@ -109,27 +109,43 @@
       <div class="container text-center">
         <h2 class="display-6 fw-bold mb-4">Sobre UniStress</h2>
         <p class="lead text-muted mb-5">Una respuesta moderna al estrés académico universitario. Promovemos el bienestar emocional desde la prevención hasta la acción.</p>
-
-        <h3 class="mb-4">Lo que dicen nuestros usuarios</h3>
         <div class="row g-4">
-          <div class="col-md-4">
-            <blockquote class="blockquote p-4 bg-light rounded shadow-sm h-100">
-              <p>“UniStress me ayudó a organizar mi rutina y a controlar la ansiedad antes de los exámenes.”</p>
-              <footer class="blockquote-footer mt-2">María G. – Psicología</footer>
-            </blockquote>
-          </div>
-          <div class="col-md-4">
-            <blockquote class="blockquote p-4 bg-light rounded shadow-sm h-100">
-              <p>“El acompañamiento personalizado marcó la diferencia. Me siento apoyado emocionalmente.”</p>
-              <footer class="blockquote-footer mt-2">Luis F. – Estudiante</footer>
-            </blockquote>
-          </div>
-          <div class="col-md-4">
-            <blockquote class="blockquote p-4 bg-light rounded shadow-sm h-100">
-              <p>“La plataforma es muy intuitiva y me mantiene equilibrada durante los momentos más exigentes.”</p>
-              <footer class="blockquote-footer mt-2">Ana S. – Estudiante</footer>
-            </blockquote>
-          </div>
+<div class="container">
+        <div class="section-title">
+            <h2 class="display-8 mt-5">Lo que dicen nuestros usuarios</h2>
+        </div>
+
+        <div class="testimonial-row mt-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="testimonial-item">
+                        <div class="stars">★★★★★</div>
+                        <p class="testimonial-text">"UniStress me ayudó a organizar mi rutina y a controlar la ansiedad antes de los exámenes."</p>
+                        <div class="user-avatar">MG</div>
+                        <div class="user-name">María González</div>
+                        <div class="user-role">Estudiante de Psicología</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="testimonial-item">
+                        <div class="stars">★★★★★</div>
+                        <p class="testimonial-text">"El acompañamiento personalizado marcó la diferencia. Me siento apoyado emocionalmente."</p>
+                        <div class="user-avatar">LF</div>
+                        <div class="user-name">Luis Fernández</div>
+                        <div class="user-role">Estudiante de Ingeniería</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="testimonial-item">
+                        <div class="stars">★★★★★</div>
+                        <p class="testimonial-text">"La plataforma es muy intuitiva y me mantiene equilibrada durante los momentos más exigentes."</p>
+                        <div class="user-avatar">AS</div>
+                        <div class="user-name">Ana Sánchez</div>
+                        <div class="user-role">Estudiante de Medicina</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
       </div>
     </section>
